<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="CarPos" Id="{8e6618c6-485b-4b9d-8999-2ed2a0bea579}">
    <Declaration><![CDATA[TYPE CarPos :
STRUCT
// coordinates of car position in 3d parking
	X:	INT;
	Y:	INT;
	Z:	INT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>